# aic23

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  plato.py  pyproject.toml  sonic_conf.cfg  utils.py
app/: main.py  plato.py
data_processing/: compress.py  crop_frame.py  extract_clip.py  extract_sound.py  extract_transcript.py
